# SocketsHpp

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-all.cmd  build-arm64.sh  build.cmd  build.sh  mcp_test.cpp  vcpkg.json
.claude/: settings.local.json
.github/chatmodes/: sockets-hpp.chatmode.md
.github/workflows/: codeql-analysis.yml
cmake/: detect-vcpkg.cmake  install-deps.cmake  target-arch.cmake
docs/: ARM64.md  BINARY_SIZE_ANALYSIS.md  BUILD_SUMMARY.md  FEATURES.md  INTEGRATION.md  MCP_IMPLEMENTATION.md  MCP_STREAMING_ANALYSIS.md  MCP_STREAMING_COMPLETE.md
examples/: README.md
examples/01-tcp-echo/: CMakeLists.txt  README.md  main.cpp
examples/02-udp-echo/: CMakeLists.txt  README.md  main.cpp
examples/03-http-server/: CMakeLists.txt  README.md  main.cpp
examples/04-http-sse/: CMakeLists.txt  README.md  main.cpp
examples/05-mcp-server/: CMakeLists.txt  README.md  main.cpp
examples/06-proxy-aware/: CMakeLists.txt  README.md  main.cpp
examples/07-authentication/: CMakeLists.txt  README.md  main.cpp
examples/08-compression/: CMakeLists.txt  README.md  main.cpp
examples/09-full-featured/: CMakeLists.txt  README.md  main.cpp
examples/10-typescript-interop/: .gitignore  CMakeLists.txt  README.md  cpp_client.cpp  cpp_server.cpp  demo.ps1  demo.sh
examples/10-typescript-interop/ts_client/: client-ai.ts  client.ts  package-lock.json  package.json  tsconfig.json
examples/10-typescript-interop/ts_server/: package-lock.json  package.json  server.ts
examples/11-vcpkg-consumption/: CMakeLists.txt  README.md  main.cpp  setup-linux.sh  setup-windows.ps1  vcpkg.json
include/: sockets.hpp
include/SocketsHpp/: config.h  macros.h
include/SocketsHpp/http/client/: http_client.h  sse_client.h
include/SocketsHpp/http/common/: http_constants.h  json_rpc.h  url_parser.h
include/SocketsHpp/http/server/: authentication.h  compression.h  compression_simple.h  compression_windows.h  http_file_server.h  http_server.h  proxy_aware.h
include/SocketsHpp/mcp/client/: mcp_client.h
include/SocketsHpp/mcp/common/: mcp_config.h
include/SocketsHpp/mcp/server/: mcp_server.h
include/SocketsHpp/net/common/: socket_server.h  socket_tools.h
include/SocketsHpp/net/server/: thread_pool_server.h
include/SocketsHpp/net/tcp/: tcp.h
include/SocketsHpp/utils/: README.md  base64.h
ports/socketshpp/: README.md  portfile.cmake  usage  vcpkg.json
samples/: CMakeLists.txt  tcp-client.cpp  udp-client.cpp
scripts/: Build-Windows.ps1  Install-Tools.ps1  Install-qemu-arm64.ps1  README.md  build-arm64.sh  build-linux.sh  fix-examples.ps1  setup-arm64-env.sh
test/: CMakeLists.txt  QUICKSTART.md  README.md  SUMMARY.md  sockets_test.cc
test/common/: test_utils.h
test/functional/: http_methods_test.cc  http_server_test.cc  http_streaming_test.cc  mcp_integration_test.cc  mcp_streamable_test.cc  sockets_test.cc  sockets_udp_test.cc  utils.h
test/unit/: authentication_test.cc  base64_test.cc  compression_test.cc  json_rpc_minimal_test.cc  json_rpc_test.cc  mcp_config_test.cc  proxy_aware_test.cc  socket_addr_test.cc  socket_basic_test.cc  sse_parser_test.cc  sse_parser_test_fixed.cc  url_parser_test.cc  url_security_test.cc
